adds new files, updates others

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: I'm bored.
   <header class="hero-header">
     <div class="pagewidth">
       <div class="logo--ie">
-        <img src="http://tylershambora.com/images/logo-icon-small.png" alt="Tyler Shambora's Personal Logo" class="logo">
+        <img src="/images/tshamz.png" alt="Tyler Shambora's Personal Logo" class="logo">
       </div>
       <ul class="inline-list git-stats">
         <li>
