--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ description: I'm bored.
   </header>
   <div class="pagewidth">
     <div class="hero-inner">
-      <h1 class="hero-text">Open-source is like a box of chocolates. You never know who's gonna get mad at you that day for not doing free work fast enough for them.</h1>
-      <p>All repos released under the <a href="http://www.wtfpl.net">WTFPL license</a></p>
+      <h1 class="hero-text">Open-source is like a box of chocolates. You never know who'll gonna get mad at you because you aren't doing enough free work.</h1>
+      <p>All repos released under the <a href="http://www.wtfpl.net">WTFPL license (jklol. they're MIT)</a></p>
     </div>
   </div>
 </div>
@@ -37,12 +37,11 @@ description: I'm bored.
       </div>
       <div class="filter-bar--right">
         <button class="btn is-active" data-filter="*">All</button>
-        <button class="btn" data-filter=".go">Go</button>
-        <button class="btn" data-filter=".javascript">JavaScript</button>
-        <button class="btn" data-filter=".css">CSS</button>
-        <button class="btn" data-filter=".liquid">HTML</button>
+        <button class="btn" data-filter=".html">HTML</button>
         <button class="btn" data-filter=".liquid">Liquid</button>
-        <button class="btn" data-filter=":not(.javascript, .css, .html, .liquid)">Other</button>
+        <button class="btn" data-filter=".css">CSS</button>
+        <button class="btn" data-filter=".javascript">JavaScript</button>
+        <button class="btn" data-filter=":not(.javascript, .css, .liquid, .html)">Other</button>
       </div>
     </div>
   </div>
